--- a/layouts/partials/hooks/head-end/custom.html
+++ b/layouts/partials/hooks/head-end/custom.html
@@ -1,1 +1,1 @@
-<a rel="me" href="https://mapstodon.space/@jeremy">Mastodon</a>
+<a rel="me" href="https://mapstodon.space/@jeremy">I'm on Mapstodon.space!</a>
