--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,1 +1,1 @@
-<a rel="me" href="https://mapstodon.space/@jeremy">I'm on Mapstodon.space!</a>
+<link rel="me" href="https://mapstodon.space/@jeremy" />
