fix link rel mamot

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,2 +1,2 @@
 <link rel="me" href="https://mapstodon.space/@jeremy" />
-<link rel="me" href="https://mamot.fr/@mapper">
+<link rel="me" href="https://mamot.fr/@mapper" />
